[build-system]
requires = ["poetry-core", "versioneer[toml]"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "myvcp"
authors = [
  "John Doe <doe.john@example.com>"
]
description = "MyVCP - A QtPyVCP based Virtual Control Panel for LinuxCNC"
readme = "README.md"
version = "0.0.1"

packages = [
    { include = "myvcp", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.scripts]
myvcp = "myvcp:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
myvcp = "myvcp"

[tool.poetry.plugins."qtpyvcp.widgets"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/myvcp/_version.py"
versionfile_build = "myvcp/_version.py"
tag_prefix = ""
parentdir_prefix = ""
